--- a/css/index.css
+++ b/css/index.css
@@ -136,34 +136,52 @@ body {
   display: block;
 }
 .container {
-  width: 85%;
+  width: 95%;
   margin: 0 auto;
 }
 header {
-  background-color: #777;
-  height: 200px;
+  background-color: #005db7;
   padding-top: 35px;
+  color: #fff;
 }
 header nav {
   display: flex;
   justify-content: space-around;
+  align-items: flex-end;
+}
+@media (max-width: 500px) {
+  header nav {
+    flex-flow: column nowrap;
+  }
+  header nav a,
+  header nav h1 {
+    display: block;
+    width: 100%;
+    text-align: center;
+    padding: 0.3rem 0;
+  }
 }
 header nav h1 {
   font-size: 3rem;
 }
 header nav a {
   text-decoration: none;
-  color: dodgerblue;
+  color: #fff;
   font-size: 2rem;
 }
 header nav a:hover {
-  color: crimson;
+  color: #960e29;
 }
 main {
   display: flex;
   justify-content: space-between;
   font-family: 'Darker Grotesque', sans-serif;
-  font-size: 16px;
+  font-size: 20px;
+}
+@media (max-width: 500px) {
+  main {
+    display: block;
+  }
 }
 main h1,
 main h2,
@@ -175,22 +193,29 @@ main h4 {
 main h2 {
   font-size: 2.25rem;
 }
-main .columns {
+main #column-left {
   flex: 1;
-  padding: 20px;
-  margin: 5px;
+  padding: 1.25rem;
+  margin: 0.5rem;
+  border-radius: 0.45rem;
+}
+main #column-right {
+  background-color: #005db7;
+  flex: 1;
+  padding: 1.25rem;
+  margin: 0.5rem;
+  border-radius: 0.45rem;
 }
 main section {
   min-height: 300px;
   margin: 2rem;
 }
+main #work {
+  background-color: #ffffff;
+  padding: 1rem;
+  border-radius: 0.45rem;
+  box-shadow: 4rem 0.75rem 1rem 3rem rgba(4, 4, 4 0.35);
+}
 main #work ul li {
   margin: 1.25rem;
-}
-main #work ul li:nth-child(even) h3 {
-  background-color: #aab;
-}
-main .column-right {
-  background-color: dodgerblue;
-  border-radius: 0.75rem;
 }
