--- a/less/index.less
+++ b/less/index.less
@@ -149,22 +149,39 @@ body {
 @heading-font: 'Abhaya Libre', serif;
 @text-font: 'Darker Grotesque', sans-serif;
 
-// container
+
+@primary-color: darken(dodgerblue, 20%);
+@accent-color: darken(crimson, 15%);
+
 
 .container {
-	width: 85%;
+	width: 95%;
 	margin: 0 auto;
 }
 
 header {
-	background-color: #777;
-	height: 200px;
+	background-color: @primary-color;
+	// height: 200px;
 	padding-top: 35px;
+	color: #fff;
 
 
 	nav {
 		display: flex;
 		justify-content: space-around;
+		align-items: flex-end;
+
+		@media (max-width: 500px) {
+			flex-flow: column nowrap;
+
+			a,
+			h1 {
+				display: block;
+				width: 100%;
+				text-align: center;
+				padding: .3rem 0;
+			}
+		}
 
 		h1 {
 			font-size: 3rem;
@@ -172,22 +189,33 @@ header {
 
 		a {
 			text-decoration: none;
-			color: dodgerblue;
+			color: #fff;
 			font-size: 2rem;
 
 			&:hover {
-				color: crimson;
+				color: @accent-color;
 			}
 		}
 
 	}
 }
 
+.columns() {
+	flex: 1;
+	padding: 1.25rem;
+	margin: .50rem;
+	border-radius: .45rem;
+}
+
 main {
 	display: flex;
 	justify-content: space-between;
 	font-family: @text-font;
-	font-size: 16px;
+	font-size: 20px;
+
+	@media (max-width: 500px) {
+		display: block;
+	}
 
 	h1,
 	h2,
@@ -201,11 +229,13 @@ main {
 		font-size: 2.25rem;
 	}
 
+	#column-left {
+		.columns()
+	}
 
-	.columns {
-		flex: 1;
-		padding: 20px;
-		margin: 5px;
+	#column-right {
+		background-color: @primary-color;
+		.columns()
 	}
 
 	section {
@@ -214,20 +244,16 @@ main {
 	}
 
 	#work {
+		background-color: lighten(@accent-color, 70%);
+		padding: 1rem;
+		border-radius: .45rem;
+		box-shadow: 4rem .75rem 1rem 3rem rgba(4, 4, 4 .35);
+
 		ul {
 			li {
 				margin: 1.25rem;
-
-				&:nth-child(even) h3 {
-					background-color: #aab;
-
-				}
 			}
 		}
 	}
 
-	.column-right {
-		background-color: dodgerblue;
-		border-radius: .75rem;
-	}
 }
